Add unidev-logger